Combine ListRecentlyAdded and ListRecentlyWatched into ListEpisodes API
